--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
   <symbol viewBox="0 0 10 16" id="next">
     <g fill="none" fill-rule="evenodd"><g transform="translate(-84 -401)" fill="currentColor" stroke="currentColor"><g transform="translate(84.566 401.992)"><path d="M7.7 7.699l-6.025 6.024a.98.98 0 1 1-1.388-1.387l5.331-5.33-5.33-5.331A.981.981 0 0 1 1.674.287L7.7 6.312a.978.978 0 0 1 0 1.387z"/></g></g></g>
   </symbol>
-  <symbol viewBox="0 0 48 41" id="air-conditioner">
+  <symbol viewBox="0 0 48 41" id="ac">
     <g fill="none" fill-rule="evenodd"><g transform="translate(-46 -245)"><g transform="translate(44 239)"><g transform="translate(2 6)" fill="currentColor"><path d="M36 13.062a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h30a1 1 0 0 0 1-1v-4zm-2 3H6v-2h28v2zM5 8.063h22a1 1 0 1 0 0-2H5a1 1 0 1 0 0 2z"/><circle cx="34" cy="6.063" r="2"/><path d="M28 25.062a1 1 0 1 0-2 0c0 1.803.647 2.775 1.168 3.555.465.697.832 1.248.832 2.445a1 1 0 1 0 2 0c0-1.802-.647-2.774-1.168-3.554-.465-.697-.832-1.248-.832-2.446zM11 24.063a1 1 0 0 0-1 1c0 1.197-.367 1.748-.832 2.445C8.648 28.288 8 29.26 8 31.063a1 1 0 1 0 2 0c0-1.198.367-1.749.832-2.446.52-.78 1.168-1.752 1.168-3.555a1 1 0 0 0-1-1zM19 24.063a1 1 0 0 0-1 1v6a1 1 0 1 0 2 0v-6a1 1 0 0 0-1-1zM42 24.063h-1v-1a1 1 0 1 0-2 0v1h-1a1 1 0 1 0 0 2h1v1a1 1 0 1 0 2 0v-1h1a1 1 0 1 0 0-2zM42 32.063h-4a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2z" id="Shape"/><path d="M44 18.063h-4v-14c0-2.207-1.794-4-4-4H4c-2.206 0-4 1.793-4 4v14c0 2.205 1.794 4 4 4h28v10c0 4.41 3.589 8 8 8s8-3.59 8-8v-10c0-2.207-1.794-4-4-4zm-11.444 2H4c-1.102 0-2-.898-2-2v-14c0-1.103.897-2 2-2h32c1.102 0 2 .897 2 2v14h-2c-1.474 0-2.75.81-3.444 2zm13.444 12c0 3.308-2.691 6-6 6s-6-2.692-6-6v-10c0-1.103.898-2 2-2h8c1.102 0 2 .897 2 2v10z"/></g></g></g></g>
   </symbol>
   <symbol viewBox="0 0 48 23" id="stats">
@@ -130,337 +130,12 @@
 
   <h2 class="page-content__title">Лента событий</h2>
 
-  <div class="grid">
-
-    <article class="module grid__cell grid__cell--l" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="23" viewBox="0 0 48 23" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#stats"></use>
-            </svg>
-          </span>
-          Еженедельный отчет по расходам ресурсов
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Сенсоры потребления</span>
-          <span class="module__date">19:00, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.
-        <img class="module__graph" src="images/data.svg" alt="Еженедельный отчет по расходам ресурсов">
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--s" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="45" viewBox="0 0 48 45" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#key"></use>
-            </svg>
-          </span>
-          Дверь открыта
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Сенсор входной двери</span>
-          <span class="module__date">18:50, Сегодня</span>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-      <button class="module__next" type="button">
-        <svg width="10" height="16" viewBox="0 0 10 16" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#next"></use>
-        </svg>
-        <span class="visually-hidden">Дальше!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--s" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="29" viewBox="0 0 48 29" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#robot-cleaner"></use>
-            </svg>
-          </span>
-          Уборка закончена
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Пылесос</span>
-          <span class="module__date">18:45, Сегодня</span>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--s" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="46" viewBox="0 0 48 46" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#router"></use>
-            </svg>
-          </span>
-          Новый пользователь
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Роутер</span>
-          <span class="module__date">18:45, Сегодня</span>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--m" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#thermal"></use>
-            </svg>
-          </span>
-          Изменен климатический режим
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Сенсор микроклимата</span>
-          <span class="module__date">18:30, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        Установлен климатический режим «Фиджи»
-        <p class="module__stats">
-          <span class="module__degree">
-            Температура: <strong>24 C</strong>
-          </span>
-          <span class="module__humidity">
-            Влажность: <strong>80%</strong>
-          </span>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module module--alert grid__cell grid__cell--m" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="41" viewBox="0 0 48 41" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#air-conditioner"></use>
-            </svg>
-          </span>
-          Невозможно включить кондиционер
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Кондиционер</span>
-          <span class="module__date">18:21, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        В комнате открыто окно, закройте его и повторите попытку
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--m" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="40" height="48" viewBox="0 0 40 48" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#music"></use>
-            </svg>
-          </span>
-          Музыка включена
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Яндекс.Станция</span>
-          <span class="module__date">18:16, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message player">
-        <p class="player__text">Сейчас проигрывается:</p>
-        <div class="player__content">
-          <div class="player__song">
-            <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
-            <div class="player__right">
-              <p class="player__name">Florence & The Machine - Big God</p>
-              <div class="player__line">
-                <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
-              </div>
-              <span class="player__num">4:31</span>
-            </div>
-          </div>
-          <div class="player__controls">
-            <p class="player__controls-wrap">
-              <button class="player__control player__control--prev" type="button"><span class="visually-hidden">Перемотай назад</span></button>
-              <button class="player__control player__control--next" type="button"><span class="visually-hidden">Перемотай вперёд</span></button>
-            </p>
-            <div class="player__right">
-              <div class="player__line">
-                <button class="player__button"><span class="visually-hidden">Громкость</span></button>
-              </div>
-              <span class="player__num">80%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--m" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="39" height="48" viewBox="0 0 39 48" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#fridge"></use>
-            </svg>
-          </span>
-          Заканчивается молоко
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Холодильник</span>
-          <span class="module__date">17:23, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?
-        <p class="module__buttons">
-          <button class="button button--yellow" type="button">Да</button>
-          <button class="button button--gray" type="button">Нет</button>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--s" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="25" viewBox="0 0 48 25" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#battery"></use>
-            </svg>
-          </span>
-          Зарядка завершена
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Оконный сенсор</span>
-          <span class="module__date">16:22, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        Ура! Устройство «Оконный сенсор» снова в строю!
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module module--alert grid__cell grid__cell--l" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="48" height="36" viewBox="0 0 48 36" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#cam"></use>
-            </svg>
-          </span>
-          Пылесос застрял
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Сенсор движения</span>
-          <span class="module__date">16:17, Сегодня</span>
-        </p>
-      </div>
-      <div class="module__message">
-        Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
-        <picture>
-          <source srcset="images/robot-cleaner@2x.webp 1x, images/robot-cleaner@3x.webp 2x" media="(min-width: 1440px)" type="image/webp">
-          <source srcset="images/robot-cleaner@2x.jpg 1x, images/robot-cleaner@3x.jpg 2x" media="(min-width: 1440px)">
-          <source srcset="images/robot-cleaner@1x.webp 1x, images/robot-cleaner@2x.webp 2x" type="image/webp">
-          <img class="module__image" src="images/robot-cleaner@1x.jpg" srcset="images/robot-cleaner@1x.jpg 1x, images/robot-cleaner@2x.jpg 2x" alt="Вид с камеры в гостиной">
-        </picture>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-    <article class="module grid__cell grid__cell--s" tabindex="0">
-      <div class="module__top">
-        <h3 class="module__title">
-          <span class="module__icon">
-            <svg width="41" height="48" viewBox="0 0 41 48" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#kettle"></use>
-            </svg>
-          </span>
-          Вода вскипела
-        </h3>
-        <p class="module__details">
-          <span class="module__type">Чайник</span>
-          <span class="module__date">16:20, Сегодня</span>
-        </p>
-      </div>
-      <button class="module__close" type="button">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="#cross"></use>
-        </svg>
-        <span class="visually-hidden">Понятно!</span>
-      </button>
-    </article>
-
-  </div>
+  <div class="grid"></div>
 
 </main>
 
 @@include('partials/page-footer.html')
-<template>
+<template id="moduleTemplate">
 
   <article class="module grid__cell" tabindex="0">
     <div class="module__top">
@@ -505,12 +180,39 @@
     <button class="button button--gray" type="button">Нет</button>
   </p>
 
-  <img class="module__graph" src="images/image.svg" alt="">
+  <img class="module__graph" src="images/data.svg" alt="Еженедельный отчет по расходам ресурсов">
 
   <picture class="module__picture">
-    <source srcset="images/image@1x.webp 1x, images/image@2x.webp 2x" type="image/webp">
-    <img class="module__image" src="images/image@1x.jpg" srcset="images/image@1x.jpg 1x, images/image@2x.jpg 2x" alt="">
+    <source srcset="images/robot-cleaner@2x.webp 1x, images/robot-cleaner@3x.webp 2x" media="(min-width: 1440px)" type="image/webp">
+    <source srcset="images/robot-cleaner@2x.jpg 1x, images/robot-cleaner@3x.jpg 2x" media="(min-width: 1440px)">
+    <source srcset="images/robot-cleaner@1x.webp 1x, images/robot-cleaner@2x.webp 2x" type="image/webp">
+    <img class="module__image" src="images/robot-cleaner@1x.jpg" srcset="images/robot-cleaner@1x.jpg 1x, images/robot-cleaner@2x.jpg 2x" alt="Вид с камеры в гостиной">
   </picture>
+
+  <div class="player">
+    <div class="player__song">
+      <img src="images/album-cover.png" width="53" height="52" alt="Обложка альбома">
+      <div class="player__right">
+        <p class="player__name">Florence & The Machine - Big God</p>
+        <div class="player__line">
+          <button class="player__button"><span class="visually-hidden">Перемотка</span></button>
+        </div>
+        <span class="player__num">4:31</span>
+      </div>
+    </div>
+    <div class="player__controls">
+      <p class="player__controls-wrap">
+        <button class="player__control player__control--prev" type="button"><span class="visually-hidden">Перемотай назад</span></button>
+        <button class="player__control player__control--next" type="button"><span class="visually-hidden">Перемотай вперёд</span></button>
+      </p>
+      <div class="player__right">
+        <div class="player__line">
+          <button class="player__button"><span class="visually-hidden">Громкость</span></button>
+        </div>
+        <span class="player__num">80%</span>
+      </div>
+    </div>
+  </div>
 
 </template>
 
